# line-crossing-tracking-demo

./: .gitignore  LICENSE  MVP설계문서.md  README.md  USAGE_GUIDE.md  create_test_video.py  draw_line.py  pyproject.toml  run_app.py  test_tracking.py  test_yolox_performance.py
configs/: line_configs.json
docs/: OC_SORT_IMPLEMENTATION.md
src/core/: config.py  enums.py  models.py
src/lidar/: data_reciever.py
src/lidar/ilidar-api-cpp_mult_V1.0.4/: CMakeLists.txt  README.txt  ilidar_api_cpp.sln
src/lidar/ilidar-api-cpp_mult_V1.0.4/multi_thread_read/: multi_thread_read.cpp  multi_thread_read.vcxproj  multi_thread_read.vcxproj.filters
src/lidar/ilidar-api-cpp_mult_V1.0.4/src/: ilidar.cpp  ilidar.hpp  packet.hpp
src/line_crossing/: detector.py  manager.py  modes.py
src/line_drawer/: __init__.py  manager.py
src/tracking/: detector_configs.py  engine.py  yolox_detector.py
src/tracking/ocsort_tracker/: README.md  association.py  ocsort.py
src/video/: source.py
streamlit_app/: main.py
tests/: debug_video_frames.py  diagnose_video_rotation.py  test_detection_only.py  test_detection_only_image.py  test_detection_viedo_per_frames.py  test_tracking.py  test_tracking_5frames.py  test_tracking_gui.py  test_tracking_line_crossing.py  test_tracking_line_crossing_lidar.py
