[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "line-crossing-tracking"
version = "0.1.0"
description = "MMTracking + OC-SORT 기반 2D 영상에서 가상 라인을 통한 실시간 출입 감지 및 모니터링 시스템"
authors = [
    {name = "park.byunghyun", email = "byunghyun@illuni.com"},
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11,<3.13"
keywords = ["computer-vision", "object-tracking", "line-crossing", "mmtracking", "oc-sort", "streamlit"]

dependencies = [
    "cython>=3.1.1",
    "mmcv>=2.0.0rc4,<2.2.0",
    "mmdet>=3.3.0",
    "opencv-python>=4.11.0.86",
    "shapely>=2.1.1",
    "streamlit>=1.45.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
