[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "line-crossing-tracking"
version = "0.1.0"
description = "MMTracking + OC-SORT 기반 2D 영상에서 가상 라인을 통한 실시간 출입 감지 및 모니터링 시스템"
authors = [
    {name = "park.byunghyun", email = "byunghyun@illuni.com"},
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11,<3.13"
keywords = ["computer-vision", "object-tracking", "line-crossing", "mmtracking", "oc-sort", "streamlit"]

dependencies = [
    "torch>=2.4.0,<2.6.0",
    "torchvision>=0.19.0,<0.23.0",
    "torchaudio>=2.4.0,<2.6.0",
    "cython>=3.1.1",
    "opencv-python>=4.11.0.86",
    "shapely>=2.1.1",
    "streamlit>=1.45.1",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "pillow>=10.0.0",
    "tqdm>=4.65.0",
    "filterpy>=1.4.5",
    "pycryptodome>=3.23.0",
    "onnxruntime>=1.22.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# PyTorch 인덱스 설정 - 플랫폼별 자동 선택
[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

# CUDA 12.4 인덱스 (CUDA 12.6과 호환)
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = []
